@@ -1,34 +1,21 @@
-// wxGridCellRenderer.h
-// This file was automatically generated
-// by extractxml.rb, part of the wxRuby project
-// Do not make changes directly to this file!
+//   Copyright 2004-2005 by Kevin Smith
+//   released under the MIT-style wxruby2 license
 
 #if !defined(_wxGridCellRenderer_h_)
 #define _wxGridCellRenderer_h_
 class wxGridCellRenderer : public wxGridCellWorker
 {
 public:
-    // draw the given cell on the provided DC inside the given rectangle
-    // using the style specified by the attribute and the default or selected
-    // state corresponding to the isSelected value.
-    //
-    // this pure virtual function has a default implementation which will
-    // prepare the DC using the given attribute: it will draw the rectangle
-    // with the bg colour from attr and set the text colour and font
     virtual void Draw(wxGrid& grid,
                       wxGridCellAttr& attr,
                       wxDC& dc,
                       const wxRect& rect,
                       int row, int col,
                       bool isSelected) = 0;
-
-    // get the preferred size of the cell for its contents
     virtual wxSize GetBestSize(wxGrid& grid,
                                wxGridCellAttr& attr,
                                wxDC& dc,
                                int row, int col);
-
-    // create a new object which is the copy of this one
     virtual wxGridCellRenderer *Clone() const = 0;
 };
 
